--- a/vcweb/static/css/guarantee/style.css
+++ b/vcweb/static/css/guarantee/style.css
@@ -9,8 +9,8 @@ body {
     margin: 0;
     padding: 0;
     background: #FFFFFF url(/static/images/guarantee/img01.gif) repeat-x left top;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.1em;
+    font-family: "Lucida Grande", "Trebuchet MS", Arial, Helvetica, Tahoma, Verdana, sans-serif;
+    font-size: 1.0em;
     color: #8A8A8A;
 }
 
