--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -13,12 +13,16 @@ h1, h2, h3, h4, h5 {
     font-weight: normal;
     color: #549900;
     font-family: Georgia, serif;
-    border-bottom:1px solid #333;
     line-height: 1.2;
     padding-bottom:.2em;
     margin-top:1em;
     margin-bottom:.7em;
 }
+
+h2, h3, h4, h5 {
+    border-bottom:1px solid #333;
+}
+
 
 h1 { font-size: 1.8em; }
 
