setting up basic chat and quiz templates, probably going to switch to tornadio package in lieu of unmaintained sockettornad.io

--- a/vcweb/core/templates/includes/participant.events.html
+++ b/vcweb/core/templates/includes/participant.events.html
@@ -14,8 +14,8 @@ function createMessageEvent(payload, event_type) {
    }
    return {
       "type": event_type,
-      "participant_id": {{participant_id}},
-      "group_id": {{group_id}},
+      "participant_id": {{participant.pk}},
+      "group_id": {{group.pk}},
       "message": payload
    };
 }
