removing hard width from menu css to allow better flow on browser resize

--- a/vcweb/core/templates/base-vcweb.html
+++ b/vcweb/core/templates/base-vcweb.html
@@ -26,7 +26,7 @@
         <div id='logo'>
             <h1>
                 {% block logo %}
-                The Virtual Commons Web Environment
+                virtual commons web environment
                 {% endblock %}
             </h1>
         </div>
