setting up dynamic experiment-specific quizzes with default configured questions for forestry

--- a/vcweb/forestry/templates/forestry/quiz.html
+++ b/vcweb/forestry/templates/forestry/quiz.html
@@ -3,26 +3,10 @@
 {% block title %} Forestry Quiz Round {% endblock %}
 
 {% block content %}
-<h3>Forestry</h3>
+<h3>Forestry Quiz</h3>
 <p>
-Welcome.  Thank you for participating in this experiment. The following
-exercise is a way to actively participate in a project about individual
-decisions and natural resources. Imagine that you or your family must make
-decisions about the use of a forest.  You and four other randomly selected
-participants have been placed into a group with access to this shared forest.
-</p>
-<p>
-You will play several rounds equivalent to years or wood harvest seasons.
-Initially your group has an area of forest with 100 initial resource units.
-Each round you and every other participant in your group will have to make a
-decision about how many resource units you want to harvest.  At the start you
-can harvest a maximum of 5 units and a minimum of 0 units from the resource.
-</p>
-<p>
-We will first start with two practice rounds.
-</p>
-
-<form action="wait" method="post">
+Before continuing, please answer the following questions.  
+<form action="" method="post">
     <input type='submit' value='Continue'/>
 </form>
 {% endblock content %}
