bugfixes: - chat_messages are now tied to round_data instead of directly to experiments - wait now redirects back to participate when the round is in progress (naive impl   using http-equiv refreshes, still need to fix the js timer / interval

--- a/vcweb/forestry/templates/forestry/wait.html
+++ b/vcweb/forestry/templates/forestry/wait.html
@@ -1,6 +1,7 @@
 {% extends "base-participant.html" %}
 
 {% block head %}
+<meta http-equiv='refresh' content='10' />
 {{ block.super }}
 <script type="text/javascript">
     var intervalId = 0;
@@ -12,6 +13,7 @@
         }
         else {
             window.clearInterval(intervalId);
+            location.reload(true);
         }
 
     }
