starting to add socket.io push interaction to experimenter monitor page

--- a/vcweb/core/templates/base-vcweb.html
+++ b/vcweb/core/templates/base-vcweb.html
@@ -12,6 +12,8 @@
         <!--[if lt IE 8]><link rel="stylesheet" href="/static/media/css/blueprint/ie.css" type="text/css" media="screen, projection" /><![endif]-->
         <link href="/static/css/guarantee/style.css" rel="stylesheet" type="text/css" media="screen" />
         <link href="/static/css/style.css" rel="stylesheet" type="text/css" media="screen" />
+        <!-- vcweb common js -->
+        <script type='text/javascript' src='/static/js/common.js'></script>
         <script type='text/javascript' src='/static/js/jquery-1.4.4.min.js'></script>
         {% include "includes/jquery.ui.html" %}
         {% dajaxice_js_import %}
