jquery-ui image references need to be switched to /static/images currently.. should look for a better solution eventually so we don't need to manually update this css everytime we update jquery-ui

--- a/vcweb/forestry/templates/forestry/chat.html
+++ b/vcweb/forestry/templates/forestry/chat.html
@@ -35,7 +35,7 @@ Forestry Chat Round
 {% block page %}
 <h3>Chat</h3>
     <div class='info ui-priority-primary ui-corner-all'>
-        <span class='ui-icon ui-icon-lightbulb'></span>
+        <span class='ui-icon ui-icon-info'></span>
         You are participant {{ participant_group_relationship.participant_number }}.
     </div>
     <div id='chat-div' class='chat notice ui-corner-all'>
