--- a/vcweb/forestry/templates/forestry/instructions.html
+++ b/vcweb/forestry/templates/forestry/instructions.html
@@ -28,5 +28,5 @@ We will first start with two practice rounds.
 {% endblock content %}
 
 {% block sidebar %}
-{% include "includes/harvest-table.html" %}
+{% include "forestry/includes/harvest-table.html" %}
 {% endblock sidebar %}
